Updated todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,2 @@
-- Fix ports
-- rsync and profit?
+Clean up the routes.rs file
+Less dodgy way of generating draft sets than saving HTML files from external websites...
